fix overflow

--- a/cafe-app/src/index.css
+++ b/cafe-app/src/index.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Bebas+Neue&family=Pangolin&family=Poppins:wght@400;600;700&family=DM+Sans:wght@400;600&display=swap');
 
 html {
-  scrollbar-width: none;  /* Firefox */
-  -ms-overflow-style: none; /* IE and Edge */
+  /* Firefox */
+  /* scrollbar-width: none; */
+  /* IE and Edge */
+  /* -ms-overflow-style: none; */
   /* overflow:none; */
-  height: 100%;
+  /* height: 100%; */
 }
 
 html::-webkit-scrollbar {
-  display: none;
+  /* display: none; */
 }
 
 body {
