--- a/cafe-app/src/pages/Welcome/styles.module.scss
+++ b/cafe-app/src/pages/Welcome/styles.module.scss
@@ -3,6 +3,7 @@
     // text-align: center;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
     // background: no-repeat url("../../assets/boba-hero-img-min.png");
     // background-position: center;
     // background-size: cover;
